tests/errors/compiler/dif_types_in_enum/dif_type_enum_and_enum_class_2.cpp
enum En1
{
	a,
	b,
	c
};

enum class En2
{
	a,
	b,
	c
};

int main()
{
	enum En2 en2 = b;
	return 0;
}
